--- a/index.html
+++ b/index.html
@@ -54,23 +54,52 @@
         </a>
       </div>
       </div>
+        <div class="setinha">
+        <span id="setinha"></span>
+      </div>
     </div>
   </header>
 
   <main>
     <section class="projects">
       <div class="container">
-        <span class="main-red">Meu trabalho</span>
+        <div class="header">
+          <span class="main-red subtittle">Meu trabalho</span>
       <h2>
         Veja os projetos em destaque
       </h2>
+        </div>
       <div class="projetos-grid">
-          <div class="card-projects"></div>
-          <div class="card-projects"></div>
-          <div class="card-projects"></div>
-          <div class="card-projects"></div>
-          <div class="card-projects"></div>
-          <div class="card-projects"></div>
+          <div class="card-projects">
+            <img src="assets/thumbnails/Thumbnail_Project-01.png" alt="">
+            <h3>Travelgram</h3>
+            <p>Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
+          </div>
+          <div class="card-projects">
+            <img src="assets/thumbnails/Thumbnail_Project-02.png" alt="">
+            <h3>Tech News</h3>
+            <p>Homepage de um portal de notícias sobre a área de tecnologia </p>
+          </div>
+          <div class="card-projects">
+            <img src="assets/thumbnails/Thumbnail_Project-03.png" alt="">
+            <h3>Página de Receita</h3>
+            <p>Página com o passo a passo de uma receita para cupcakes</p>
+          </div>
+          <div class="card-projects">
+            <img src="assets/thumbnails/Thumbnail_Project-04.png" alt="">
+            <h3>Zingen</h3>
+            <p>Landing Page completa e responsiva de um aplicativo de Karaokê</p>
+          </div>
+          <div class="card-projects">
+            <img src="assets/thumbnails/Thumbnail_Project-05.png" alt="">
+            <h3>Refund</h3>
+            <p>Um sistema para pedido e acompanhamento de reembolso </p>
+          </div>
+          <div class="card-projects">
+            <img src="assets/thumbnails/Thumbnail_Project-06.png" alt="">
+            <h3>Página de Turismo</h3>
+            <p>Página com as principais informações para quem quer viajar para Busan</p>
+          </div>
         </div>
       </div>
     </section>
