--- a/index.html
+++ b/index.html
@@ -21,36 +21,36 @@
       <div class="apresentation">
         <img src="assets/Avatar.png" alt="" class="profile">
 
-      <p class="hero-subtittle">Hello World! Meu nome é <span class="main-red">Artur Ribeiro</span> e sou</p>
+      <p class="hero-subtittle subtittle">Hello World! Meu nome é <span class="main-red">Artur Ribeiro</span> e sou</p>
 
       <h1 class="hero-tittle">Desenvolvedor Fullstack</h1>
 
-      <p class="hero-description">Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da <br> minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
+      <p class="hero-description text-sm">Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da <br> minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
 
       <div class="tecnologias">
         <a href="#" class="linguagens">
           <span id="github"></span>
-          <p>Github</p>
+          <p class="text-md">Github</p>
         </a>
         <a href="#" class="linguagens">
           <span id="html"></span>
-          <p>HTML</p>
+          <p class="text-md">HTML</p>
         </a>
         <a href="#" class="linguagens">
           <span id="css"></span>
-          <p>CSS</p>
+          <p class="text-md">CSS</p>
         </a>
         <a href="#" class="linguagens">
           <span id="js"></span>
-          <p>Javascript</p>
+          <p class="text-md">Javascript</p>
         </a>
         <a href="#" class="linguagens">
           <span id="react"></span>
-          <p>React</p>
+          <p class="text-md">React</p>
         </a>
         <a href="#" class="linguagens">
           <span id="node"></span>
-          <p>Node.js</p>
+          <p class="text-md">Node.js</p>
         </a>
       </div>
       </div>
@@ -72,47 +72,79 @@
       <div class="projetos-grid">
           <div class="card-projects">
             <img src="assets/thumbnails/Thumbnail_Project-01.png" alt="">
-            <h3>Travelgram</h3>
-            <p>Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
+            <div class="texto">
+              <h3 class="tittle-sm">Travelgram</h3>
+            <p class="text-sm">Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
+            </div>
           </div>
           <div class="card-projects">
             <img src="assets/thumbnails/Thumbnail_Project-02.png" alt="">
-            <h3>Tech News</h3>
-            <p>Homepage de um portal de notícias sobre a área de tecnologia </p>
+            <div class="texto">
+            <h3 class="tittle-sm">Tech News</h3>
+            <p class="text-sm">Homepage de um portal de notícias sobre a área de tecnologia </p>
+            </div>
           </div>
           <div class="card-projects">
             <img src="assets/thumbnails/Thumbnail_Project-03.png" alt="">
-            <h3>Página de Receita</h3>
-            <p>Página com o passo a passo de uma receita para cupcakes</p>
+            <div class="texto">
+            <h3 class="tittle-sm">Página de Receita</h3>
+            <p class="text-sm">Página com o passo a passo de uma receita para cupcakes</p>
+            </div>
           </div>
           <div class="card-projects">
             <img src="assets/thumbnails/Thumbnail_Project-04.png" alt="">
-            <h3>Zingen</h3>
-            <p>Landing Page completa e responsiva de um aplicativo de Karaokê</p>
+            <div class="texto">
+            <h3 class="tittle-sm">Zingen</h3>
+            <p class="text-sm">Landing Page completa e responsiva de um aplicativo de Karaokê</p>
+            </div>
           </div>
           <div class="card-projects">
             <img src="assets/thumbnails/Thumbnail_Project-05.png" alt="">
-            <h3>Refund</h3>
-            <p>Um sistema para pedido e acompanhamento de reembolso </p>
+            <div class="texto">
+            <h3 class="tittle-sm">Refund</h3>
+            <p class="text-sm">Um sistema para pedido e acompanhamento de reembolso </p>
+            </div>
           </div>
           <div class="card-projects">
             <img src="assets/thumbnails/Thumbnail_Project-06.png" alt="">
-            <h3>Página de Turismo</h3>
-            <p>Página com as principais informações para quem quer viajar para Busan</p>
+            <div class="texto">
+            <h3 class="tittle-sm">Página de Turismo</h3>
+            <p class="text-sm">Página com as principais informações para quem quer viajar para Busan</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <section class="services">
       <div class="container">
-        <span class="main-red">
+        <div class="header">
+          <span class="main-red subtittle">
         Meus serviços
       </span>
-      <h2>Como posso ajudar o seu negócio</h2>
+      <h2 class="tittle-md">Como posso ajudar o seu negócio</h2>
+        </div>
       <div class="projetos-service">
-        <div class="card-services"></div>
-        <div class="card-services"></div>
-        <div class="card-services"></div>
+        <div class="card-services">
+          <span id="pc"></span>
+          <div class="texto-services">
+          <h3 class="tittle-sm">Websites e Aplicativos</h3>
+          <p class="text-sm">Desenvolvimento de Interfaces</p>
+          </div>
+        </div>
+        <div class="card-services">
+          <span id="api"></span>
+          <div class="texto-services">
+          <h3 class="tittle-sm">API e banco de dados</h3>
+          <p class="text-sm">Criação de serviços de sistema</p>
+          </div>
+        </div>
+        <div class="card-services">
+          <span id="devops"></span>
+          <div class="texto-services">
+          <h3 class="tittle-sm">DevOps</h3>
+          <p class="text-sm">Gestão e infraestrutura da aplicação</p>
+          </div>
+        </div>
       </div>
       </div>
     </section>
