--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
             <img src="assets/thumbnails/Thumbnail_Project-02.png" alt="">
             <div class="texto">
             <h3 class="tittle-sm">Tech News</h3>
-            <p class="text-sm">Homepage de um portal de notícias sobre a área de tecnologia </p>
+            <p class="text-sm">Homepage de um portal de notícias sobre a <br> área de tecnologia </p>
             </div>
           </div>
           <div class="card-projects">
             <img src="assets/thumbnails/Thumbnail_Project-03.png" alt="">
             <div class="texto">
             <h3 class="tittle-sm">Página de Receita</h3>
-            <p class="text-sm">Página com o passo a passo de uma receita para cupcakes</p>
+            <p class="text-sm">Página com o passo a passo de uma receita <br> para cupcakes</p>
             </div>
           </div>
           <div class="card-projects">
@@ -150,15 +150,32 @@
     </section>
     <section class="contacts">
         <div class="container">
-          <span class="main-purple">Contato</span>
-          <h2>Gostou do meu trabalho?</h2>
-          <p>Entre em contato ou acompanhe as minhas redes sociais!</p>
-
+          <div class="contacts-header">
+          <span class="main-purple subtittle">Contato</span>
+          <h2 class="tittle-md">Gostou do meu trabalho?</h2>
+          <p class="text-md">Entre em contato ou acompanhe as minhas redes sociais!</p>
+          </div>
           <div class="column-contats">
-            <div class="card-contats"></div>
-            <div class="card-contats"></div>
-            <div class="card-contats"></div>
-            <div class="card-contats"></div>
+            <div class="card-contats">
+              <span class="icon-contacts" id="linkedin"></span>
+              <h3 class="text-md">Linkedin</h3>
+              <div class="setinha-azul"></div>
+            </div>
+            <div class="card-contats">
+              <span class="icon-contacts" id="instagram"></span> 
+              <h3 class="text-md">Instagram</h3>
+              <div class="setinha-azul"></div>
+            </div>
+            <div class="card-contats">
+              <span class="icon-contacts" id="github"></span>
+              <h3 class="text-md">Github</h3>
+              <div class="setinha-azul"></div>
+            </div>
+            <div class="card-contats">
+              <span class="icon-contacts" id="email"></span>
+              <h3 class="text-md">E-mail</h3>
+              <div class="setinha-azul"></div>
+            </div>
           </div>
         </div>
     </section>
