--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
             <img src="assets/thumbnails/Thumbnail_Project-05.png" alt="">
             <div class="texto">
             <h3 class="tittle-sm">Refund</h3>
-            <p class="text-sm">Um sistema para pedido e acompanhamento de reembolso </p>
+            <p class="text-sm">Um sistema para pedido e acompanhamento <br> de reembolso </p>
             </div>
           </div>
           <div class="card-projects">
             <img src="assets/thumbnails/Thumbnail_Project-06.png" alt="">
             <div class="texto">
             <h3 class="tittle-sm">Página de Turismo</h3>
-            <p class="text-sm">Página com as principais informações para quem quer viajar para Busan</p>
+            <p class="text-sm">Página com as principais informações para <br> quem quer viajar para Busan</p>
             </div>
           </div>
         </div>
@@ -156,26 +156,26 @@
           <p class="text-md">Entre em contato ou acompanhe as minhas redes sociais!</p>
           </div>
           <div class="column-contats">
-            <div class="card-contats">
+            <a class="card-contats" href="#">
               <span class="icon-contacts" id="linkedin"></span>
               <h3 class="text-md">Linkedin</h3>
               <div class="setinha-azul"></div>
-            </div>
-            <div class="card-contats">
+            </a>
+            <a class="card-contats" href="#">
               <span class="icon-contacts" id="instagram"></span> 
               <h3 class="text-md">Instagram</h3>
               <div class="setinha-azul"></div>
-            </div>
-            <div class="card-contats">
+            </a>
+            <a class="card-contats" href="#">
               <span class="icon-contacts" id="github"></span>
               <h3 class="text-md">Github</h3>
               <div class="setinha-azul"></div>
-            </div>
-            <div class="card-contats">
+            </a>
+            <a class="card-contats" href="#">
               <span class="icon-contacts" id="email"></span>
               <h3 class="text-md">E-mail</h3>
               <div class="setinha-azul"></div>
-            </div>
+            </a>
           </div>
         </div>
     </section>
