--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="hero">
     <div class="container">
       <div class="apresentation">
-        <img src="assets/Avatar.png" alt="" class="profile">
+        <img src="assets/Avatar.png" alt="Foto de Artur Ribeiro" class="profile">
 
       <p class="hero-subtittle subtittle">Hello World! Meu nome é <span class="main-red">Artur Ribeiro</span> e sou</p>
 
@@ -71,42 +71,42 @@
         </div>
       <div class="projetos-grid">
           <div class="card-projects">
-            <img src="assets/thumbnails/Thumbnail_Project-01.png" alt="">
+            <img src="assets/thumbnails/Thumbnail_Project-01.png" alt="Foto de projeto Travelgram">
             <div class="texto">
               <h3 class="tittle-sm">Travelgram</h3>
             <p class="text-sm">Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
             </div>
           </div>
           <div class="card-projects">
-            <img src="assets/thumbnails/Thumbnail_Project-02.png" alt="">
+            <img src="assets/thumbnails/Thumbnail_Project-02.png" alt="Foto de projeto Technews">
             <div class="texto">
             <h3 class="tittle-sm">Tech News</h3>
             <p class="text-sm">Homepage de um portal de notícias sobre a <br> área de tecnologia </p>
             </div>
           </div>
           <div class="card-projects">
-            <img src="assets/thumbnails/Thumbnail_Project-03.png" alt="">
+            <img src="assets/thumbnails/Thumbnail_Project-03.png" alt="Foto de projeto da Página de Receita">
             <div class="texto">
             <h3 class="tittle-sm">Página de Receita</h3>
             <p class="text-sm">Página com o passo a passo de uma receita <br> para cupcakes</p>
             </div>
           </div>
           <div class="card-projects">
-            <img src="assets/thumbnails/Thumbnail_Project-04.png" alt="">
+            <img src="assets/thumbnails/Thumbnail_Project-04.png" alt="Foto de projeto de aplicativo de Karaokê">
             <div class="texto">
             <h3 class="tittle-sm">Zingen</h3>
             <p class="text-sm">Landing Page completa e responsiva de um aplicativo de Karaokê</p>
             </div>
           </div>
           <div class="card-projects">
-            <img src="assets/thumbnails/Thumbnail_Project-05.png" alt="">
+            <img src="assets/thumbnails/Thumbnail_Project-05.png" alt="Foto de projeto de reembolso">
             <div class="texto">
             <h3 class="tittle-sm">Refund</h3>
             <p class="text-sm">Um sistema para pedido e acompanhamento <br> de reembolso </p>
             </div>
           </div>
           <div class="card-projects">
-            <img src="assets/thumbnails/Thumbnail_Project-06.png" alt="">
+            <img src="assets/thumbnails/Thumbnail_Project-06.png" alt="Foto de projeto de página de Turismo">
             <div class="texto">
             <h3 class="tittle-sm">Página de Turismo</h3>
             <p class="text-sm">Página com as principais informações para <br> quem quer viajar para Busan</p>
